--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -25,6 +25,7 @@ ethbloom = "0.13.0"
 ethereum-types = "0.14.1"
 serde_json = "1.0.96"
 statrs = "0.16.0"
+thiserror = "1.0"
 rustc-hex = "2.1.0"
 
 # Trie dependencies
