--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,20 @@
 # builds and ad-hoc cargo invocations all
 # result in the consistent compilation
 target-dir = "./build/lib/target"
+
+rustflags = [
+  "-C", "link-arg=-z",
+  "-C", "link-arg=undefs",
+]
+
+[target.x86_64-apple-darwin]
+rustflags = [
+  "-C", "link-arg=-undefined",
+  "-C", "link-arg=dynamic_lookup",
+]
+
+[target.aarch64-apple-darwin]
+rustflags = [
+  "-C", "link-arg=-undefined",
+  "-C", "link-arg=dynamic_lookup",
+]
