--- a/lib/ain-contracts/Cargo.toml
+++ b/lib/ain-contracts/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0.96"
 hex = "0.4.3"
 lazy_static = "1.4"
 sha3 = "0.10.6"
+sp-core = "20.0.0"
 
 [build-dependencies]
 ethers = "2.0.7"
