--- a/lib/ain-cpp-imports/Cargo.toml
+++ b/lib/ain-cpp-imports/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 cxx = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
 [build-dependencies]
 anyhow = "1.0.70"
