Refactor to consistently wrap storage interface in Results

--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -17,6 +17,7 @@ sha3 = "0.10.6"
 hex = "0.4.3"
 hex-literal = "0.4"
 anyhow = "1.0"
+thiserror = "1.0.44"
 bincode = "1.3.3"
 rand = "0.8.5"
 keccak-hash = "0.10.0"
