--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -157,6 +157,7 @@ DEFI_TESTS =\
   test/util_tests.cpp \
   test/validation_block_tests.cpp \
   test/versionbits_tests.cpp \
+  test/xvm_tests.cpp \
   test/empty_template_tests.cpp
 
 if ENABLE_PROPERTY_TESTS
