Add rust ffi function to create evm dst20 call transfer function tx

--- a/lib/ain-contracts/Cargo.toml
+++ b/lib/ain-contracts/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 primitive-types = "0.12.1"
 anyhow = "1.0"
 ethereum = "0.14.0"
+ethers = "2.0.7"
 serde_json = "1.0.96"
 hex = "0.4.3"
 lazy_static = "1.4"
