--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -10,50 +10,50 @@ ain-contracts = { path = "../ain-contracts" }
 evm = { version = "0.39", default-features = false, features = ["with-serde"] }
 primitive-types = { version = "0.12", default-features = false, features = ["serde"] }
 log = "0.4"
-rlp = "0.5.2"
-libsecp256k1 = "0.7.1"
-ethereum = "0.14.0"
-sha3 = "0.10.6"
-hex = "0.4.3"
+rlp = "0.5"
+libsecp256k1 = "0.7"
+ethereum = "0.14"
+sha3 = "0.10"
+hex = "0.4"
 hex-literal = "0.4"
 anyhow = "1.0"
-thiserror = "1.0.44"
-bincode = "1.3.3"
-rand = "0.8.5"
-keccak-hash = "0.10.0"
+thiserror = "1.0"
+bincode = "1.3"
+rand = "0.8"
+keccak-hash = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-ethbloom = "0.13.0"
-ethereum-types = "0.14.1"
-serde_json = "1.0.96"
-statrs = "0.16.0"
-rustc-hex = "2.1.0"
+ethbloom = "0.13"
+ethereum-types = "0.14"
+serde_json = "1.0"
+statrs = "0.16"
+rustc-hex = "2.1"
 
 # Trie dependencies
-hash-db = "0.16.0"
-sp-core = "20.0.0"
-vsdb_trie_db = { version = "0.7.0", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine"] }
-vsdb_core = { version = "0.55.0", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine", "compress"] }
+hash-db = "0.16"
+sp-core = "22.0"
+vsdb_trie_db = { version = "0.7", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine"] }
+vsdb_core = { version = "0.55", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine", "compress"] }
 vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
 
 # Runtime dependencies
 lazy_static = "1.4"
-jsonrpsee-core = "0.18"
-jsonrpsee-http-server = "0.15"
-jsonrpsee-types = "0.18"
+jsonrpsee-core = "0.16"
+jsonrpsee-server = "0.16"
+jsonrpsee-types = "0.16"
 tokio = { version = "1.1", features = ["rt-multi-thread"] }
 
 # Cache dependencies
-lru = "0.10.0"
+lru = "0.11"
 
 # Precompile dependencies
-sp-io = "20.0.0"
+sp-io = "24.0"
 num = { version = "0.4", default-features = false, features = ["alloc"] }
 ripemd = { version = "0.1", default-features = false }
-substrate-bn = "0.6.0"
+substrate-bn = "0.6"
 
 # Database dependencies
-rocksdb = { version = "0.20.1", default-features = false }
+rocksdb = { version = "0.20", default-features = false }
 
 [dev-dependencies]
-tempdir = "0.3.7"
-once_cell = "1.17.1"
+tempdir = "0.3"
+once_cell = "1.17"
