--- a/lib/ain-grpc/Cargo.toml
+++ b/lib/ain-grpc/Cargo.toml
@@ -9,7 +9,8 @@ ain-evm = { path = "../ain-evm" }
 ain-cpp-imports = { path = "../ain-cpp-imports" }
 cxx = "1.0"
 env_logger = "0.10"
-jsonrpsee = { version = "0.15", features = ["http-server", "macros", "http-client"] }
+jsonrpsee = { version = "0.16.3", features = ["server", "macros", "http-client"] }
+jsonrpsee-server = { version = "0.16.3" }
 lazy_static = "1.4"
 log = "0.4"
 libsecp256k1 = "0.7.1"
