--- a/lib/ain-contracts/Cargo.toml
+++ b/lib/ain-contracts/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-primitive-types = "0.12"
-anyhow = "1.0"
-ethereum = "0.14"
-serde_json = "1.0"
-hex = "0.4"
-lazy_static = "1.4"
-sha3 = "0.10"
-sp-core = "22.0"
+primitive-types.workspace = true
+anyhow.workspace = true
+ethereum.workspace = true
+serde_json.workspace = true
+hex.workspace = true
+lazy_static.workspace = true
+sha3.workspace = true
+sp-core.workspace = true
 
 [build-dependencies]
-ethers = "2.0"
-ethers-solc = "2.0"
-serde_json = "1.0"
-anyhow = "1.0"
+ethers.workspace = true
+ethers-solc.workspace = true
+serde_json.workspace = true
+anyhow.workspace = true
