--- a/lib/ain-cpp-imports/Cargo.toml
+++ b/lib/ain-cpp-imports/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cxx = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+cxx.workspace = true
+serde = { workspace = true, features = ["derive"] }
 
 [build-dependencies]
-anyhow = "1.0.70"
-cxx-build = "1.0"
+anyhow.workspace = true
+cxx-build.workspace = true
