--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -7,53 +7,53 @@ edition = "2021"
 ain-cpp-imports = { path = "../ain-cpp-imports" }
 ain-contracts = { path = "../ain-contracts" }
 
-evm = { version = "0.39", default-features = false, features = ["with-serde"] }
-primitive-types = { version = "0.12", default-features = false, features = ["serde"] }
-log = "0.4"
-rlp = "0.5"
-libsecp256k1 = "0.7"
-ethereum = "0.14"
-sha3 = "0.10"
-hex = "0.4"
-hex-literal = "0.4"
-anyhow = "1.0"
-thiserror = "1.0"
-bincode = "1.3"
-rand = "0.8"
-keccak-hash = "0.10"
-serde = { version = "1.0", features = ["derive"] }
-ethbloom = "0.13"
-ethereum-types = "0.14"
-serde_json = "1.0"
-statrs = "0.16"
-rustc-hex = "2.1"
+evm = { workspace = true, default-features = false, features = ["with-serde"] }
+primitive-types = { workspace = true, default-features = false, features = ["serde"] }
+log.workspace = true
+rlp.workspace = true
+libsecp256k1.workspace = true
+ethereum.workspace = true
+sha3.workspace = true
+hex.workspace = true
+hex-literal.workspace = true
+anyhow.workspace = true
+thiserror.workspace = true
+bincode.workspace = true
+rand.workspace = true
+keccak-hash.workspace = true
+serde = { workspace = true, features = ["derive"] }
+ethbloom.workspace = true
+ethereum-types.workspace = true
+serde_json.workspace = true
+statrs.workspace = true
+rustc-hex.workspace = true
 
 # Trie dependencies
-hash-db = "0.16"
-sp-core = "22.0"
-vsdb_trie_db = { version = "0.7", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine"] }
-vsdb_core = { version = "0.55", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine", "compress"] }
-vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
+hash-db.workspace = true
+sp-core.workspace = true
+vsdb_trie_db = { workspace = true, features = ["rocks_engine"] }
+vsdb_core = { workspace = true, features = ["rocks_engine", "compress"] }
+vsdbsled = { workspace = true }
 
 # Runtime dependencies
-lazy_static = "1.4"
-jsonrpsee-core = "0.16"
-jsonrpsee-server = "0.16"
-jsonrpsee-types = "0.16"
-tokio = { version = "1.1", features = ["rt-multi-thread"] }
+lazy_static.workspace = true
+jsonrpsee-core.workspace = true
+jsonrpsee-server.workspace = true
+jsonrpsee-types.workspace = true
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 
 # Cache dependencies
-lru = "0.11"
+lru.workspace = true
 
 # Precompile dependencies
-sp-io = "24.0"
-num = { version = "0.4", default-features = false, features = ["alloc"] }
-ripemd = { version = "0.1", default-features = false }
-substrate-bn = "0.6"
+sp-io.workspace = true
+num = { workspace = true, default-features = false, features = ["alloc"] }
+ripemd = { workspace = true, default-features = false }
+substrate-bn.workspace = true
 
 # Database dependencies
-rocksdb = { version = "0.20", default-features = false }
+rocksdb = { workspace = true, default-features = false }
 
 [dev-dependencies]
-tempdir = "0.3"
-once_cell = "1.17"
+tempdir.workspace = true
+once_cell.workspace = true
