--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -23,15 +23,18 @@ ethereum = { git = 'https://github.com/defich/ethereum.git' }
 
 ## lang
 
+log = "0.4"
+env_logger = "0.10"
 anyhow = "1.0"
 thiserror = "1.0"
-log = "0.4"
 rand = "0.8"
+once_cell = "1.17"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.1", features = ["rt-multi-thread"] }
-once_cell = "1.17"
+async-trait = "0.1"
+regex = "1.5"
 
 ## crypto
 
@@ -42,10 +45,22 @@ sha3 = "0.10"
 ## common
 
 num = { version = "0.4", default-features = false, features = ["alloc"] }
+num-traits = "0.2"
 
 hex = "0.4"
 hex-literal = "0.4"
 bincode = "1.3"
+cxx = "1.0"
+serde_with = "3.0"
+tonic = "0.9"
+tonic-build = "0.9"
+prost = "0.11"
+prost-build = "0.11"
+
+jsonrpsee = { version = "0.16", features = ["server", "macros", "http-client"] }
+jsonrpsee-core = "0.16"
+jsonrpsee-server = "0.16"
+jsonrpsee-types = "0.16"
 
 ### eth
 
@@ -69,10 +84,6 @@ vsdb_trie_db = { version = "0.7", git = "https://github.com/defich/vsdb.git", fe
 vsdb_core = { version = "0.55", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine", "compress"] }
 vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
 
-#### Runtime dependencies
-jsonrpsee-core = "0.16"
-jsonrpsee-server = "0.16"
-jsonrpsee-types = "0.16"
 
 #### Cache dependencies
 lru = "0.11"
@@ -83,10 +94,6 @@ substrate-bn = "0.6"
 
 #### Database dependencies
 rocksdb = { version = "0.20", default-features = false }
-
-### ain-cpp-imports
-
-cxx = "1.0"
 
 ## build-deps
 
@@ -109,3 +116,11 @@ tempdir = "0.3"
 
 ethers = "2.0"
 ethers-solc = "2.0"
+
+### ain-grpc
+
+heck = "0.4"
+quote = "1.0"
+syn = { version = "2.0", default-features = false, features = ["parsing", "printing"] }
+
+prettyplease = "0.2.4"
