--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Run tests
         run: |
           npm ci
-          DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test --testTimeout=600000
+          DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test -- --testTimeout=600000
