CI: Extend Jellyfish timeout (#2394)
* extend jellyfish ci timeout

* flag correction

* add -- to support extra flag

---------

Co-authored-by: Prasanna Loganathar <pvl@prasannavl.com>

--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -12,7 +12,7 @@ concurrency:
 
 env:
   BUILD_VERSION: latest # Computed
-  
+
 jobs:
   test:
     name: Test
@@ -35,10 +35,10 @@ jobs:
         run: cd defichain && GIT_VERSION=1 ./make.sh ci-export-vars
 
       - name: Build and setup
-        run: "cd defichain && docker build -t test-build-container 
+        run: "cd defichain && docker build -t test-build-container
           -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile ."
 
       - name: Run tests
         run: |
           npm ci
-          DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test
+          DEFICHAIN_DOCKER_IMAGE=test-build-container npm run ci:test -- --testTimeout=600000
