--- a/lib/ain-contracts/Cargo.toml
+++ b/lib/ain-contracts/Cargo.toml
@@ -13,6 +13,7 @@ serde_json.workspace = true
 hex.workspace = true
 sha3.workspace = true
 sp-core.workspace = true
+lazy_static.workspace = true
 
 [build-dependencies]
 ethers.workspace = true
