--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -71,7 +71,7 @@ ethereum-types = "0.14"
 keccak-hash = "0.10"
 primitive-types = { version = "0.12", default-features = false, features = ["serde"] }
 rlp = "0.5"
-
+ethabi = "18.0.0"
 
 ### ain-evm
 evm = { version = "0.39", default-features = false, features = ["with-serde"] }
