--- a/lib/ain-contracts/Cargo.toml
+++ b/lib/ain-contracts/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-primitive-types.workspace = true
+ethereum-types.workspace = true
 anyhow.workspace = true
 ethereum.workspace = true
 serde_json.workspace = true
