--- a/lib/ain-rs-exports/Cargo.toml
+++ b/lib/ain-rs-exports/Cargo.toml
@@ -16,7 +16,7 @@ ain-contracts = { path = "../ain-contracts" }
 
 ethereum.workspace = true
 rlp.workspace = true
-primitive-types.workspace = true
+ethereum-types.workspace = true
 log.workspace = true
 hex.workspace = true
 serde_json.workspace = true
