--- a/lib/cli/Cargo.toml
+++ b/lib/cli/Cargo.toml
@@ -8,7 +8,7 @@ ain-grpc = { path = "../ain-grpc" }
 
 jsonrpsee = { version = "0.18", features = ["http-client"] }
 structopt = "0.3.26"
-primitive-types = "0.12.1"
+ethereum-types.workspace = true
 serde = "1.0.160"
 serde_json = "1.0.96"
 hex = "0.4.3"
