--- a/lib/ain-contracts/Cargo.toml
+++ b/lib/ain-contracts/Cargo.toml
@@ -14,6 +14,7 @@ hex.workspace = true
 sha3.workspace = true
 sp-core.workspace = true
 lazy_static.workspace = true
+ethabi.workspace = true
 
 [build-dependencies]
 ethers.workspace = true
