--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -78,6 +78,7 @@ tempdir = "0.3"
 rocksdb = { version = "0.21", default-features = false }
 statrs = "0.16"
 rustc-hex = "2.1"
+rustc_version_runtime = "0.2.1"
 
 ### eth
 
