--- a/lib/ain-grpc/Cargo.toml
+++ b/lib/ain-grpc/Cargo.toml
@@ -16,6 +16,7 @@ log.workspace = true
 libsecp256k1.workspace = true
 num-traits.workspace = true
 prost.workspace = true
+rustc_version_runtime.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread"] }
