--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,6 +7,9 @@ target-dir = "./build/lib/target"
 rustflags = [
   "-C", "link-arg=-z",
   "-C", "link-arg=undefs",
+  ## Enable below for debug when needed to force frame pointers
+  # "-C", "force-frame-pointers=y",
+  # "-C", "force-unwind-tables=y",
 ]
 
 [target.x86_64-apple-darwin]
