Switch out std mutexes to parking lot and spin mutexes (#2512)
* Switch out std mutexes with parking_lot

* Add spin locks

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -79,6 +79,8 @@ rocksdb = { version = "0.21", default-features = false }
 statrs = "0.16"
 rustc-hex = "2.1"
 rustc_version_runtime = "0.2.1"
+parking_lot = "0.12.1"
+spin = "0.9.8"
 
 ### eth
 
