--- a/configure.ac
+++ b/configure.ac
@@ -242,6 +242,9 @@ if test "x$enable_debug" = xyes; then
   # Disable all optimizations
   AX_CHECK_COMPILE_FLAG([-O0], [[DEBUG_CXXFLAGS="$DEBUG_CXXFLAGS -O0"]],,[[$CXXFLAG_WERROR]])
 
+  # Store frame pointer
+  AX_CHECK_COMPILE_FLAG([-fno-omit-frame-pointer], [[DEBUG_CXXFLAGS="$DEBUG_CXXFLAGS -fno-omit-frame-pointer"]],,[[$CXXFLAG_WERROR]])
+
   # Prefer -g3, fall back to -g if that is unavailable.
   AX_CHECK_COMPILE_FLAG(
     [-g3],
