Use hex for subscription ID, link newPendingTransactions

--- a/lib/ain-grpc/Cargo.toml
+++ b/lib/ain-grpc/Cargo.toml
@@ -29,6 +29,7 @@ rlp.workspace = true
 sha3.workspace = true
 serde_with.workspace = true
 anyhow.workspace = true
+rand.workspace = true
 
 [build-dependencies]
 cxx-gen.workspace = true
