--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -23,6 +23,8 @@ env:
   # make.sh still defaults to debug for local builds
   MAKE_DEBUG: 0
   GIT_VERSION: 1
+  # Disable incremental build
+  CARGO_INCREMENTAL: 0
 
 jobs:
   linux-x64:
