--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,6 +18,8 @@ concurrency:
 env:
   TARGET: x86_64-pc-linux-gnu
   MAKE_DEBUG: 0
+  # Disable incremental build
+  CARGO_INCREMENTAL: 0
 
 jobs:
   generic:
