--- a/.github/workflows/tests-frontier.yml
+++ b/.github/workflows/tests-frontier.yml
@@ -10,6 +10,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
+env:
+  # Disable incremental build
+  CARGO_INCREMENTAL: 0
+
 jobs:
   build:
     runs-on: ubuntu-latest
