--- a/.github/workflows/tests-jellyfish.yml
+++ b/.github/workflows/tests-jellyfish.yml
@@ -36,6 +36,10 @@ jobs:
       - name: Populate environment
         run: cd defichain && GIT_VERSION=1 ./make.sh ci-export-vars
 
+      - uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: defichain/lib -> ../build/lib/target
+
       - name: Build and setup
         run: "cd defichain && docker build -t test-build-container
           -f ./contrib/dockerfiles/x86_64-pc-linux-gnu.dockerfile ."
