--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -38,6 +38,10 @@ jobs:
     - name: Populate environment
       run: ./make.sh ci-export-vars
 
+    - uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: lib -> ../build/lib/target
+
     - name: Build and package
       run: ./make.sh docker-release
 
