--- a/.github/workflows/tests-ethlibs.yaml
+++ b/.github/workflows/tests-ethlibs.yaml
@@ -28,6 +28,10 @@ jobs:
     - name: Populate environment
       run: ./make.sh ci-export-vars
 
+    - uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: lib -> ../build/lib/target
+
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
 
