Reduce debug to 1

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,6 +12,9 @@ rustflags = [
   # "-C", "force-unwind-tables=y",
 ]
 
+[profile.dev]
+debug = 1
+
 [target.x86_64-apple-darwin]
 rustflags = [
   "-C", "link-arg=-undefined",
