--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,8 +18,6 @@ concurrency:
 env:
   TARGET: x86_64-pc-linux-gnu
   MAKE_DEBUG: 0
-  # Disable incremental build
-  CARGO_INCREMENTAL: 0
 
 jobs:
   generic:
@@ -51,15 +49,16 @@ jobs:
     - name: Populate environment
       run: ./make.sh ci-export-vars
 
-    - uses: Swatinem/rust-cache@v2
-      with:
-        workspaces: lib -> ../build/lib/target
-
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
 
     - name: Setup dependencies for target
       run: ./make.sh ci-setup-deps-target
+
+    - uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: lib -> ../build/lib/target
+        save-if: ${{ github.ref == 'refs/heads/master' }}
 
     - name: Build depends and configure
       run: ./make.sh build-deps && ./make.sh build-conf
