--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,7 +14,7 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
-      
+
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest
@@ -43,6 +43,11 @@ jobs:
     - name: Install dependencies for target
       run: ./make.sh ci-setup-deps-target
 
+    - uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: lib -> ../build/lib/target
+        save-if: ${{ github.ref == 'refs/heads/master' }}
+
     - name: Build deps and configure
       run: ./make.sh build
       
@@ -64,6 +69,11 @@ jobs:
 
     - name: Setup dependencies for target
       run: ./make.sh ci-setup-deps-target
+
+    - uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: lib -> ../build/lib/target
+        save-if: ${{ github.ref == 'refs/heads/master' }}
 
     - name: Build deps and configure
       run: ./make.sh build-deps && ./make.sh build-conf
