--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 ain-cpp-imports = { path = "../ain-cpp-imports" }
 ain-contracts = { path = "../ain-contracts" }
 
-evm = { workspace = true, default-features = false, features = ["with-serde"] }
+evm = { workspace = true, default-features = false, features = ["with-serde", "tracing", "std"] }
+evm-runtime.workspace = true
 log.workspace = true
 rlp.workspace = true
 libsecp256k1.workspace = true
