--- a/lib/ain-grpc/Cargo.toml
+++ b/lib/ain-grpc/Cargo.toml
@@ -29,7 +29,9 @@ rlp.workspace = true
 sha3.workspace = true
 serde_with.workspace = true
 anyhow.workspace = true
-
+tower-http.workspace = true
+tower.workspace = true
+hyper.workspace = true
 [build-dependencies]
 cxx-gen.workspace = true
 heck.workspace = true
