--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -15,9 +15,9 @@ resolver = "2"
 lto = true
 
 [patch.crates-io]
-vsdb = { git = 'https://github.com/defich/vsdb.git' }
-vsdbsled = { git = 'https://github.com/defich/vsdbsled.git' }
-ethereum = { git = 'https://github.com/defich/ethereum.git' }
+vsdb = { git = "https://github.com/defich/vsdb.git" }
+vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
+ethereum = { git = "https://github.com/defich/ethereum.git" }
 
 [workspace.dependencies]
 
@@ -89,7 +89,7 @@ spin = "0.9.8"
 
 evm = { version = "0.39", default-features = false, features = ["with-serde"] }
 
-ethereum = "0.14"
+ethereum = { git = "https://github.com/defich/ethereum.git" }
 ethereum-types = "0.14"
 keccak-hash = "0.10"
 rlp = "0.5"
@@ -109,7 +109,7 @@ vsdb_core = { version = "0.55", git = "https://github.com/defich/vsdb.git", feat
 vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
 
 #### Cache dependencies
-lru = "0.11"
+lru = "0.12"
 
 #### Precompile dependencies
 sp-io = "24.0"
