--- a/lib/ain-grpc/Cargo.toml
+++ b/lib/ain-grpc/Cargo.toml
@@ -32,6 +32,8 @@ anyhow.workspace = true
 tower-http.workspace = true
 tower.workspace = true
 hyper.workspace = true
+rand.workspace = true
+
 [build-dependencies]
 cxx-gen.workspace = true
 heck.workspace = true
