--- a/lib/ain-evm/Cargo.toml
+++ b/lib/ain-evm/Cargo.toml
@@ -33,9 +33,10 @@ spin.workspace = true
 # Trie dependencies
 hash-db.workspace = true
 sp-core.workspace = true
-vsdb_trie_db = { workspace = true, features = ["rocks_engine"] }
-vsdb_core = { workspace = true, features = ["rocks_engine", "compress"] }
-vsdbsled = { workspace = true }
+kvdb.workspace = true
+kvdb-rocksdb.workspace = true
+sp-trie.workspace = true
+trie-db.workspace = true
 
 # Runtime dependencies
 lazy_static.workspace = true
@@ -59,3 +60,4 @@ rocksdb = { workspace = true, default-features = false }
 [dev-dependencies]
 tempdir.workspace = true
 once_cell.workspace = true
+
