--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -66,7 +66,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: defichain-${{ env.BUILD_VERSION }}-x86_64-w64-mingw32
-        path: ./build/defichain-${{ env.BUILD_VERSION }}-x86_64-w64-mingw32.tar.gz
+        path: ./build/defichain-${{ env.BUILD_VERSION }}-x86_64-w64-mingw32.zip
 
   osx-x64:
     runs-on: ubuntu-latest
@@ -132,24 +132,3 @@ jobs:
 
     - name: Get artifacts
       uses: actions/download-artifact@v3
-
-    - name: zip package for win-x64
-      run: |
-        set -e; ver=${{ env.BUILD_VERSION }}
-        cd defichain-${ver}-x86_64-w64-mingw32
-        tar xzf defichain-${ver}-x86_64-w64-mingw32.tar.gz
-        zip -r "defichain-${ver}-x86_64-w64-mingw32.zip" defichain-${ver}/
-
-    - name: Generate SHA256 checksum
-      run: |
-        set -e; ver=${{ env.BUILD_VERSION }}
-        (cd ./defichain-${ver}-x86_64-pc-linux-gnu
-        sha256sum ./defichain-${ver}-x86_64-pc-linux-gnu.tar.gz > ./defichain-${ver}-x86_64-pc-linux-gnu.tar.gz.SHA256)
-        (cd ./defichain-${ver}-aarch64-linux-gnu
-        sha256sum ./defichain-${ver}-aarch64-linux-gnu.tar.gz > ./defichain-${ver}-aarch64-linux-gnu.tar.gz.SHA256)
-        (cd ./defichain-${ver}-x86_64-w64-mingw32
-        sha256sum ./defichain-${ver}-x86_64-w64-mingw32.zip > ./defichain-${ver}-x86_64-w64-mingw32.zip.SHA256)
-        (cd ./defichain-${ver}-x86_64-apple-darwin
-        sha256sum ./defichain-${ver}-x86_64-apple-darwin.tar.gz > ././defichain-${ver}-x86_64-apple-darwin.tar.gz.SHA256)
-        (cd ./defichain-${ver}-aarch64-apple-darwin
-        sha256sum ./defichain-${ver}-aarch64-apple-darwin.tar.gz > ././defichain-${ver}-aarch64-apple-darwin.tar.gz.SHA256)
