--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -81,7 +81,7 @@ jobs:
       run: ./make.sh ci-export-vars
 
     - name: Build and package
-      run: ./make.sh docker-release
+      run: ./make.sh docker-release "" zip
 
     - name: Publish artifact - x86_64-w64-mingw32
       uses: actions/upload-artifact@v3
