--- a/.github/workflows/tests-sync.yml
+++ b/.github/workflows/tests-sync.yml
@@ -121,7 +121,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Download Snapshot
-      run: aria2c -x16 -s16 ${{ env.BASE_PATH }}/${{ env.BUCKET }}/${{ BASE_REF }}-datadir/datadir-${{matrix.blocks.start}}.tar.gz
+      run: aria2c -x16 -s16 ${{ env.BASE_PATH }}/${{ env.BUCKET }}/${{ env.BASE_REF }}-datadir/datadir-${{matrix.blocks.start}}.tar.gz
 
     - name: Create datadir
       run: mkdir $DATADIR && tar -C $DATADIR -xvf datadir-${{matrix.blocks.start}}.tar.gz
