--- a/lib/ain-grpc/Cargo.toml
+++ b/lib/ain-grpc/Cargo.toml
@@ -9,6 +9,7 @@ ain-evm = { path = "../ain-evm" }
 ain-cpp-imports = { path = "../ain-cpp-imports" }
 cxx.workspace = true
 env_logger.workspace = true
+evm = { workspace = true, default-features = false, features = ["with-serde"] }
 jsonrpsee = { workspace = true, features = ["server", "macros", "http-client"] }
 jsonrpsee-server.workspace = true
 lazy_static.workspace = true
