--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -87,7 +87,8 @@ spin = "0.9.8"
 
 ### eth
 
-evm = { version = "0.39", default-features = false, features = ["with-serde"] }
+evm = { version = "0.39", default-features = false, features = ["with-serde", "tracing"] }
+evm-runtime = "0.39.0"
 
 ethereum = { git = "https://github.com/defich/ethereum.git" }
 ethereum-types = "0.14"
