--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -16,6 +16,7 @@ lto = true
 
 [patch.crates-io]
 vsdb = { git = "https://github.com/defich/vsdb.git" }
+vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
 ethereum = { git = "https://github.com/defich/ethereum.git" }
 
 [workspace.dependencies]
