Disable incremental builds

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -41,6 +41,8 @@ jobs:
     name: Rust Lints
     runs-on: ubuntu-latest
     container: defi/ain-builder:latest
+    env:
+      CARGO_INCREMENTAL: 0
     steps:
     - name: Checkout
       uses: actions/checkout@v3
