--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,6 +23,7 @@ jobs:
       GITHUB_PULL_REQUEST: ${{ github.event.number }}
       TESTS_FAILFAST: 0
       TESTS_COMBINED_LOGS: 500
+      CARGO_INCREMENTAL: 0
     steps:
     - name: Checkout base branch and/or merge
       if: github.event_name != 'pull_request'
@@ -50,11 +51,6 @@ jobs:
 
     - name: Build deps and configure
       run: ./make.sh build
-
-      # Temp. workaround: Clean up build artifacts to clear up disk space
-      # or the GH runners run out
-    - name: Cleanup build artifacts
-      run: find build ! -name 'defid' ! -name 'defi-cli' -delete || true
       
     - name: E2E tests
       run: ./make.sh test
