--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -50,11 +50,7 @@ jobs:
         save-if: ${{ github.ref == 'refs/heads/master' }}
 
     - name: Build deps and configure
-      run: ./make.sh build
-
-    # Temp. workaround to save space to prevent GH runners from running out
-    - name: Cleanup cargo deps
-      run: rm -rf build/lib/target/debug/deps
+      run: ./make.sh build-conf
       
     - name: E2E tests
       run: ./make.sh test
