--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,6 +23,7 @@ jobs:
       GITHUB_PULL_REQUEST: ${{ github.event.number }}
       TESTS_FAILFAST: 0
       TESTS_COMBINED_LOGS: 500
+      CARGO_INCREMENTAL: 0
     steps:
     - name: Checkout base branch and/or merge
       if: github.event_name != 'pull_request'
@@ -50,6 +51,10 @@ jobs:
 
     - name: Build deps and configure
       run: ./make.sh build
+
+    # Temp. workaround to save space to prevent GH runners from running out
+    - name: Cleanup cargo deps
+      run: rm -rf build/lib/target/debug/deps
       
     - name: E2E tests
       run: ./make.sh test
