Ocean endpoints scaffold

--- a/lib/ain-ocean/Cargo.toml
+++ b/lib/ain-ocean/Cargo.toml
@@ -6,18 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-tokio-serde = { version = "0.8.0", features = ["json"] }
-log = "0.4"
-futures = "0.3.29"
-async-trait = "0.1.74"
-anyhow = "1.0.75"
-jsonrpsee =  { version = "0.20.3", features = ["server", "macros", "http-client", "jsonrpsee-server"] }
-bitcoin = "0.30.1"
-rocksdb = "0.21.0"
-ctrlc = "3.1.9"
-tempdir = "0.3.7"
-hex = "0.4"
-bitcoin_hashes = "0.12.0"
-structopt = { version = "0.3", default-features = false }
+axum.workspace = true
+serde.workspace = true
