--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -78,7 +78,8 @@ jsonrpsee-core = "0.16"
 jsonrpsee-server = "0.16"
 jsonrpsee-types = "0.16"
 
-axum = { version = "0.7.1", features = ["macros"] }
+axum = "0.6.20"
+
 tempdir = "0.3"
 
 rocksdb = { version = "0.21", default-features = false }
