--- a/.github/workflows/tests-sync.yml
+++ b/.github/workflows/tests-sync.yml
@@ -28,7 +28,8 @@ jobs:
     env:
       CARGO_INCREMENTAL: 0
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -36,7 +37,7 @@ jobs:
     - name: Setup dependencies
       run: sudo ./make.sh ci-setup-deps
 
-    - name: Setup dependencies for user
+    - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
     - uses: Swatinem/rust-cache@v2
@@ -52,8 +53,8 @@ jobs:
       with:
         name: defi-bins
         path: |
-         build/src/defid
-         build/src/defi-cli
+          build/src/defid
+          build/src/defi-cli
 
     - name: Upload shell commands
       uses: actions/upload-artifact@v3
@@ -74,7 +75,8 @@ jobs:
         matrix: ${{ steps.set-matrix.outputs.matrix }}
 
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
+        - run: git config --global --add safe.directory '*'
 
         - id: 'auth'
           name: 'Authenticate to Google Cloud'
@@ -117,7 +119,8 @@ jobs:
     timeout-minutes: 4320
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - run: git config --global --add safe.directory '*'
 
     - name: Download Snapshot
       run: aria2c -x16 -s16 https://storage.googleapis.com/team-drop/master-datadir/datadir-${{matrix.blocks.start}}.tar.gz
