--- a/.github/workflows/tests-ethlibs.yaml
+++ b/.github/workflows/tests-ethlibs.yaml
@@ -15,15 +15,19 @@ concurrency:
 
 env:
   NODE_URL: "http://127.0.0.1:19551/"
+  TARGET: x86_64-pc-linux-gnu
+  MAKE_DEBUG: 0
 
 jobs:
   build:
-    env:
-      CARGO_INCREMENTAL: 0
     runs-on: ubuntu-latest
     container: defi/ain-builder:latest
+    env:
+      CARGO_INCREMENTAL: 0
+
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -31,7 +35,7 @@ jobs:
     - name: Setup dependencies
       run: ./make.sh ci-setup-deps
 
-    - name: Setup dependencies for user
+    - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
     - uses: Swatinem/rust-cache@v2
@@ -83,7 +87,7 @@ jobs:
         go-version: '^1.17.0'
 
     - name: Setup go-ethlibs test suites
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         repository: 'DeFiCh/go-ethlibs'
 
