--- a/.github/workflows/tests-frontier.yml
+++ b/.github/workflows/tests-frontier.yml
@@ -12,11 +12,14 @@ concurrency:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+    container: defi/ain-builder:latest
     env:
       CARGO_INCREMENTAL: 0
-    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -24,7 +27,7 @@ jobs:
     - name: Setup dependencies
       run: sudo ./make.sh ci-setup-deps
 
-    - name: Setup dependencies for user
+    - name: Setup user dependencies
       run: ./make.sh ci-setup-user-deps
 
     - uses: Swatinem/rust-cache@v2
@@ -39,17 +42,15 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: defi-bins
-        path: |
-          build/src/defid
+        path: build/src/defid
 
   test:
     name: Frontier tests
     runs-on: ubuntu-latest
-
     needs: build
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           repository: defich/metachain-ts-tests
           ref: 'main'
