--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -51,12 +51,13 @@ jobs:
 
   stage-docker-release:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [stage-release]
     env:
       TARGET: x86_64-pc-linux-gnu
 
     steps:
     - uses: actions/checkout@v4
+    - run: git config --global --add safe.directory '*'
 
     - name: Populate environment
       run: ./make.sh ci-export-vars
@@ -67,4 +68,4 @@ jobs:
         name: defichain-${{ env.BUILD_VERSION }}-${{ env.TARGET }}
 
     - name: Build defi image
-      run: ./make.sh docker-defi-build
+      run: rm .dockerignore && ./make.sh docker-defi-build
